Fixed bug #23657 (Missing initialization in browscap module init)